Fix search button appearance This removes a border of colour --kiwiki-text-color that appears when in dark mode

--- a/css/basic.css
+++ b/css/basic.css
@@ -105,10 +105,6 @@ body.lightmode #theme-mode svg#themeicon #light {
   display: initial;
 }
 
-#kiwiki.darkmode form.search .no button[type="submit"] {
-  border: 1px solid var(--kiwiki-text-color);
-}
-
 * {
   outline: 0;
 }
